Refactor `BFS` and `Dijkstra` algorithms to improve type safety and readability
- Updated `BFS` to use `List` instead of `MyArrayList` for result type and `Queue` operations.
- Updated `Dijkstra` to accept `List` for avoided rooms, improving flexibility.
- Made both classes `final` to prevent inheritance.